# celerity

./: .env.config  .gitattributes  Dockerfile  README.md  local.yml  pyproject.toml  pytest.ini  ruff.toml  start.sh
.devcontainer/: devcontainer.json
.github/: CODE_OF_CONDUCT.md
.github/workflows/: ci.yml  publish.yml  test.yml
examples/: iers.py  planets.py
src/celerity/: __init__.py  astrometry.py  common.py  constants.py  constraints.py  coordinates.py  cosmology.py  de.py  ecliptic.py  eop.py  equinox.py  humanize.py  iers.py  light.py  moon.py  night.py  nutation.py  optics.py  parallax.py  projection.py  seeing.py  solstice.py  sun.py  tai.py  temporal.py  transit.py  utilities.py  vsop87.py
src/celerity/data/: vsop87d.json
tests/: test_abberation.py  test_astrometry.py  test_common.py  test_constants.py  test_constraints.py  test_coordinates.py  test_cosmology.py  test_de.py  test_distance.py  test_earth.py  test_ecliptic.py  test_eop.py  test_epoch.py  test_equinox.py  test_humanize.py  test_iers.py  test_integration.py  test_light.py  test_magnitude.py  test_moon.py  test_night.py  test_nutation.py  test_optics.py  test_photometry.py  test_planets.py  test_precession.py  test_projection.py  test_refraction.py  test_seeing.py  test_solstice.py  test_sun.py  test_tai.py  test_telescope.py  test_temporal.py  test_time.py  test_transit.py  test_utilities.py  test_vsop.py
