[tool.poetry]
name = "celerity"
version = "0.1.0"
description = "Celerity is a lightweight, zero-dependency and type-safe Python library for astronomical calculations."
authors = ["Michael J. Roberts <michael@observerly.com>"]
readme = "README.md"
packages = [{include = "celerity", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
